--- a/themes/blocks.css
+++ b/themes/blocks.css
@@ -29,6 +29,7 @@
   top: 0;
   left:0;
   overflow-y:auto;
+  overflow-x:hidden;
 }
 
 .blocks .bgimg.griditem{
